--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 <link rel="stylesheet" href="./style.css">
 <body>
   <header class ="header-fluid" style="margin-left: 20px">
-    <div class="row" style="margin-top: 20px;">
-        <div class="col-md-2">
+    <div class="row" style="margin-top: 20px;margin-left: 0px;">
+        <div class="col-md-1">
             <button>TO GARAGE</button>
         </div>
         <div class="col-md-2">
@@ -22,13 +22,13 @@
 
   </header>
   <div class="garage">
-  <div class="container-fluid" style="margin-left: 20px">
-  <nav class = "navbar navbar-expand-sm navbar-dark " style="margin-top: 50px;">
+  <div class="container-fluid" style="margin-left: 10px">
+  <nav class = "navbar navbar-expand-sm navbar-dark " style="margin-top: 30px;">
     
       <ul class="navbar-nav flex-column mr-auto">
         <li class="nav-item" >
-          <input type="text">
-          <input type="color">
+          <input type="text" >
+          <input type="color" >
            <button>GREATE</button>
            
         </li>
@@ -37,7 +37,7 @@
            <input type="color">
            <button>UPGRADE</button>
         </li>
-        <li class="nav-item" style="margin-top:10px;">
+        <li class="nav-item" style="margin-top:3px;">
           <button>RACE</button>
           <button>RESET</button>
           <button>GENERATE CARS</button>
@@ -46,7 +46,7 @@
   </nav>
 </div>
 
-<div class="container-fluid" style="margin-left: 20px; margin-top: 70px;">
+<div class="container-fluid" style="margin-left: 20px; margin-top: 30px;">
   <div class="Gar" style="display:flex ;">
   <h1 >Garage_ </h1> 
   <h1>1</h1> 
