--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
     
       <ul class="navbar-nav flex-column mr-auto">
         <li class="nav-item" >
-          <input type="text" >
-          <input type="color" >
-           <button>GREATE</button>
+          <input type="text" class = "greate_name">
+          <input type="color"class = "greate_color">
+           <button class = "greate_car">GREATE</button>
            
         </li>
         <li class="nav-item">
