--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,9 @@
            
         </li>
         <li class="nav-item">
-           <input type="text" >
-           <input type="color">
-           <button>UPGRADE</button>
+           <input type="text"  class = "upgrate_name" >
+           <input type="color" class = "upgrate_color">
+           <button class = "upgrate_car" >UPGRADE</button>
         </li>
         <li class="nav-item" style="margin-top:3px;">
           <button>RACE</button>
