--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
            <button class = "upgrate_car" >UPGRADE</button>
         </li>
         <li class="nav-item" style="margin-top:3px;">
-          <button>RACE</button>
+          <button class="race_btn">RACE</button>
           <button>RESET</button>
           <button class = 'generate_car_btn'>GENERATE CARS</button>
        </li>
@@ -110,6 +110,11 @@
   </ul>
 </div>
 <div class="row" style="margin-top: 40px;margin-bottom: 40px; margin-left: 50%;">
+  <div class="page" style="display:flex ;">
+    <h2>page #_ </h2>
+    <h2 class="num_page_end">1</h2>
+  </div>
+  
 <div class="col-md-1">
   <button class="prew_btn">PREW</button>
 </div>
