--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         </li>
         <li class="nav-item" style="margin-top:3px;">
           <button class="race_btn">RACE</button>
-          <button>RESET</button>
+          <button class = 'reset'>RESET</button>
           <button class = 'generate_car_btn'>GENERATE CARS</button>
        </li>
      </ul>
