--- a/src/index.html
+++ b/src/index.html
@@ -30,13 +30,13 @@
     
       <ul class="navbar-nav flex-column mr-auto">
         <li class="nav-item" >
-          <input type="text" class = "greate_name">
+          <input type="text" placeholder = "Марка автомобиля" class = "greate_name">
           <input type="color"class = "greate_color">
            <button class = "greate_car">GREATE</button>
            
         </li>
         <li class="nav-item">
-           <input type="text"  class = "upgrate_name" >
+           <input type="text" placeholder = "Марка автомобиля"  class = "upgrate_name" >
            <input type="color" class = "upgrate_color">
            <button class = "upgrate_car" >UPGRADE</button>
         </li>
